[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/myenv"

[workspace.dependencies]
rhi-myenv-core = { path = "crates/rhi-myenv-core" }
rhi-myenv-seed = { path = "crates/rhi-myenv-seed" }
rhi-myenv-store = { path = "crates/rhi-myenv-store" }
