[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/myenv"

[workspace.dependencies]
myenv-core = { path = "crates/myenv-core" }
myenv-seed = { path = "crates/myenv-seed" }
myenv-store = { path = "crates/myenv-store" }
