[package]
name = "myenv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for myenv, a generic tool orchestrator"

[[bin]]
name = "myenv"
path = "src/main.rs"

[dependencies]
myenv-core.workspace = true
myenv-seed.workspace = true
clap = { version = "4", features = ["derive"] }
notify = "8"
